--- a/.github/workflows/security-crawl-maze-score.yaml
+++ b/.github/workflows/security-crawl-maze-score.yaml
@@ -20,11 +20,11 @@ jobs:
         working-directory: cmd/katana/
 
       - name: Run Katana Standard
-        run: ./katana -u https://security-crawl-maze.app/ -jc -d 10 -o output_standard.txt
+        run: ./katana -u https://security-crawl-maze.app/ -kf -jc -d 10 -o output_standard.txt -cos node_modules
         working-directory: cmd/katana
         
       - name: Run Katana Headless
-        run: ./katana -u https://security-crawl-maze.app/ -jc -d 10 -headless -o output_headless.txt
+        run: ./katana -u https://security-crawl-maze.app/ -kf -jc -d 10 -headless -o output_headless.txt -cos node_modules
         working-directory: cmd/katana
 
       - name: Run Score
