--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -9,12 +9,12 @@ jobs:
     name: Lint Test
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: "Set up Go"
-        uses: actions/setup-go@v3
-        with: 
-          go-version: 1.18
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3.3.0
         with:
