--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,8 +1,10 @@
 name: 🔨 Build Test
+
 on:
-  push:
-  pull_request:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - dev
 
 jobs:
   build:
@@ -11,6 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
+
     steps:
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -20,14 +23,18 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
+      - name: Test
+        run: go test ./...
+        working-directory: .
+
       - name: Build
         run: go build .
         working-directory: cmd/katana/
 
-      - name: Test
-        run: go test ./...
-        working-directory: .
-        
+      - name: Install
+        run: go install
+        working-directory: cmd/katana/
+
       - name: Race Condition Tests
         run: go build -race .
         working-directory: cmd/katana/
