--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -1,8 +1,10 @@
 name: 🙏🏻 Lint Test
+
 on:
-  push:
-  pull_request:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - dev
 
 jobs:
   lint:
