--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-
+        os: [ubuntu-latest, windows-latest, macOS-12]
+        go-version: [1.18.x, 1.19.x]
     steps:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.18
+          go-version: ${{ matrix.os }}
 
       - name: Check out code
         uses: actions/checkout@v3
