--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-
+        os: [ubuntu-latest, windows-latest, macOS-12]
+        go-version: [1.18.x, 1.19.x]
     steps:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.18
+          go-version: ${{ matrix.go-version }}
 
       - name: Check out code
         uses: actions/checkout@v3
@@ -30,6 +30,12 @@ jobs:
       - name: Build
         run: go build .
         working-directory: cmd/katana/
+
+      - name: Integration Tests
+        env:
+          GH_ACTION: true
+        run: bash run.sh
+        working-directory: integration_tests/
 
       - name: Install
         run: go install
