--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-12]
+        os: [ubuntu-latest-8-cores, windows-latest-8-cores, macOS-12]
         go-version: [1.18.x, 1.19.x]
     steps:
       - name: Set up Go
