--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -40,3 +40,7 @@ announce:
     channel: '#release'
     username: GoReleaser
     message_template: '{{ .ProjectName }} {{ .Tag }} is out! Check it out at {{ .ReleaseURL }}'
+
+  discord:
+    enabled: true
+    message_template: '**New Release: {{ .ProjectName }} {{.Tag}}** is published! Check it out at {{ .ReleaseURL }}'
