--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -5,14 +5,16 @@ on:
   pull_request:
     branches:
       - dev
-
+    paths:
+      - '**.go'
+      - '**.mod'
 jobs:
   build:
     name: Test Builds
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-12]
+        os: [ubuntu-latest-16-cores, windows-latest-8-cores, macOS-12]
         go-version: [1.19.x, 1.20.x]
     steps:
       - name: Set up Go
