--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -5,18 +5,23 @@ on:
   pull_request:
     branches:
       - dev
-
+    paths:
+      - '**.go'
+      - '**.mod'
 jobs:
   lint:
     name: Lint Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     steps:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: 1.19
+          cache: true
+
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3.4.0
         with:
