--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     steps:
       - name: "Check out code"
         uses: actions/checkout@v3
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-go@v3
         with: 
           go-version: 1.19
+          cache: true
       
       - name: "Create release on GitHub"
         uses: goreleaser/goreleaser-action@v4
