--- a/.github/workflows/security-crawl-maze-score.yaml
+++ b/.github/workflows/security-crawl-maze-score.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Run Scoring
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     steps:
       - name: Set up Go
         uses: actions/setup-go@v3
