misc workflow update

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -2,6 +2,7 @@ changelog:
   exclude:
     authors:
       - app/dependabot
+      - dependabot
   categories:
     - title: 🎉 Features
       labels:
