added release test in build pipeline

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -43,6 +43,13 @@ jobs:
         run: go install
         working-directory: cmd/katana/
 
+      - name: release test
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          args: "release --clean --snapshot "
+          version: latest
+          workdir: .
+
       - name: Race Condition Tests
         run: go build -race .
         working-directory: cmd/katana/
