disabling cgo due to tree-sitter bindings

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,9 +3,9 @@ before:
     - go mod tidy
 
 builds:
-- env:
-  - CGO_ENABLED=0
-  goos:
+# - env:
+#   - CGO_ENABLED=0
+- goos:
     - windows
     - linux
     - darwin
