--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,9 +3,9 @@ before:
     - go mod tidy
 
 builds:
-# - env:
-#   - CGO_ENABLED=0
-- goos:
+- env:
+  - CGO_ENABLED=1
+  goos:
     - windows
     - linux
     - darwin
@@ -28,8 +28,7 @@ builds:
 
 archives:
 - format: zip
-  replacements:
-      darwin: macOS
+  name_template: '{{ .ProjectName }}_{{ .Version }}_{{ if eq .Os "darwin" }}macOS{{ else }}{{ .Os }}{{ end }}_{{ .Arch }}'
 
 checksum:
   algorithm: sha256
