retesting merged solution

--- a/.goreleaser/windows.yml
+++ b/.goreleaser/windows.yml
@@ -9,8 +9,8 @@ builds:
     ldflags:
       - -s -w
     binary: katana
-    # env:
-    # - CGO_ENABLED=1 # necessary only with tree-sitter
+    env:
+    - CGO_ENABLED=1
     main: ./cmd/katana/main.go
     goos:
       - windows
