removing filters + go bump

--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -5,9 +5,9 @@ on:
   pull_request:
     branches:
       - dev
-    paths:
-      - '**.go'
-      - '**.mod'
+    # paths:
+    #   - '**.go'
+    #   - '**.mod'
 jobs:
   lint:
     name: Lint Test
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: 1.20.x
           cache: true
 
       - name: Run golangci-lint
