--- a/.github/workflows/functional-test.yml
+++ b/.github/workflows/functional-test.yml
@@ -2,9 +2,9 @@ name: 🧪 Functional Test
 
 on:
   pull_request:
-    paths:
-      - '**.go'
-      - '**.mod'
+    # paths:
+    #   - '**.go'
+    #   - '**.mod'
   workflow_dispatch:
 
 jobs:  
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: 1.20.x
 
       - name: Check out code
         uses: actions/checkout@v3
