--- a/.github/workflows/security-crawl-maze-score.yaml
+++ b/.github/workflows/security-crawl-maze-score.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: 1.20.x
 
       - name: Check out code
         uses: actions/checkout@v3
