--- a/.github/workflows/functional-test.yml
+++ b/.github/workflows/functional-test.yml
@@ -2,9 +2,9 @@ name: 🧪 Functional Test
 
 on:
   pull_request:
-    # paths:
-    #   - '**.go'
-    #   - '**.mod'
+    paths:
+      - '**.go'
+      - '**.mod'
   workflow_dispatch:
 
 jobs:  
