--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest-16-cores, windows-latest-8-cores, macOS-12]
-        go-version: [1.19.x, 1.20.x]
+        go-version: [1.20.x]
     steps:
       - name: Set up Go
         uses: actions/setup-go@v4
