--- a/.github/workflows/dep-auto-merge.yml
+++ b/.github/workflows/dep-auto-merge.yml
@@ -1,9 +1,9 @@
-name: 🤖 dep-auto-merge
+name: 🤖 dep auto merge
 
 on:
   pull_request:
     branches:
-      - main
+      - dev
   workflow_dispatch:
 
 permissions:
@@ -14,6 +14,7 @@ permissions:
 jobs:
   automerge:
     runs-on: ubuntu-latest
+    if: github.actor == 'dependabot[bot]'
     steps:
       - uses: actions/checkout@v3
         with:
