--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest-16-cores, windows-latest-8-cores, macOS-12]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
         go-version: [1.20.x]
     steps:
       - name: Set up Go
