--- a/.goreleaser/mac.yml
+++ b/.goreleaser/mac.yml
@@ -17,10 +17,10 @@ builds:
     goarch:
       - amd64
       - arm64
+
 archives:
 - format: zip
-  # replacements:
-  #     darwin: macOS
+  name_template: '{{ .ProjectName }}_{{ .Version }}_{{ if eq .Os "darwin" }}macOS{{ else }}{{ .Os }}{{ end }}_{{ .Arch }}'
 
 checksum:
   name_template: "{{ .ProjectName }}-mac-checksums.txt"
