--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -9,7 +9,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  release-test:
+  release-test-mac:
+    runs-on: macos-latest
+    steps:
+      - name: "Check out code"
+        uses: actions/checkout@v3
+        with: 
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.20.x
+      
+      - name: release test
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          args: "release -f .goreleaser/mac.yml --clean --snapshot"
+          version: latest
+          workdir: .
+
+  release-test-linux:
     runs-on: ubuntu-latest-16-cores
     steps:
       - name: "Check out code"
@@ -25,6 +45,26 @@ jobs:
       - name: release test
         uses: goreleaser/goreleaser-action@v4
         with:
-          args: "release --clean --snapshot"
+          args: "release -f .goreleaser/linux.yml --clean --snapshot"
+          version: latest
+          workdir: .
+
+  release-test-windows:
+    runs-on: windows-latest-8-cores
+    steps:
+      - name: "Check out code"
+        uses: actions/checkout@v3
+        with: 
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.20.x
+      
+      - name: release test
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          args: "release -f .goreleaser/windows.yml --clean --snapshot"
           version: latest
           workdir: .
