--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -41,6 +41,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.20.x
+
+      # todo: musl compatible?
+      - name: Install Dependences
+        run: sudo apt install gcc-aarch64-linux-gnu
       
       - name: release test
         uses: goreleaser/goreleaser-action@v4
