Disabling cgo due to tree-sitter bindings (#527)
* disabling cgo due to tree-sitter bindings

* enable cgo explicitly

* splitting goreleaser due to c bindings

* fixing comment

* retesting merged solution

* removing filters + go bump

* fixing lint

* restoring gh action filters

* misc update

* readding to mac

* release covers yml

* split test release

* fixing build action

* trying cross-compiling fix

* testing gcc

* test

* .

* win fix #1

* removing win arm

* bye 386

* syntax fixes + removed duplicate announcement

---------

Co-authored-by: sandeep <8293321+ehsandeep@users.noreply.github.com>

--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -7,7 +7,28 @@ on:
   workflow_dispatch:
 
 jobs:
-  release:
+  build-mac:
+    runs-on: macos-latest
+    steps:
+      - name: "Check out code"
+        uses: actions/checkout@v3
+        with: 
+          fetch-depth: 0
+      
+      - name: "Set up Go"
+        uses: actions/setup-go@v4
+        with: 
+          go-version: 1.20.x
+          cache: true
+      
+      - name: "Create release on GitHub"
+        uses: goreleaser/goreleaser-action@v4
+        with: 
+          args: "release -f .goreleaser/mac.yml --clean"
+          version: latest
+          workdir: .
+
+  build-linux:
     runs-on: ubuntu-latest-16-cores
     steps:
       - name: "Check out code"
@@ -24,7 +45,28 @@ jobs:
       - name: "Create release on GitHub"
         uses: goreleaser/goreleaser-action@v4
         with: 
-          args: "release --rm-dist"
+          args: "release -f .goreleaser/linux.yml --clean"
+          version: latest
+          workdir: .
+
+  build-windows:
+    runs-on: windows-latest-8-cores
+    steps:
+      - name: "Check out code"
+        uses: actions/checkout@v3
+        with: 
+          fetch-depth: 0
+      
+      - name: "Set up Go"
+        uses: actions/setup-go@v4
+        with: 
+          go-version: 1.20.x
+          cache: true
+      
+      - name: "Create release on GitHub"
+        uses: goreleaser/goreleaser-action@v4
+        with: 
+          args: "release -f .goreleaser/windows.yml --clean"
           version: latest
           workdir: .
         env: 
