--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -30,29 +30,6 @@ jobs:
         env: 
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
-  build-linux:
-    runs-on: ubuntu-latest-16-cores
-    steps:
-      - name: "Check out code"
-        uses: actions/checkout@v3
-        with: 
-          fetch-depth: 0
-      
-      - name: "Set up Go"
-        uses: actions/setup-go@v4
-        with: 
-          go-version: 1.20.x
-          cache: true
-      
-      - name: "Create release on GitHub"
-        uses: goreleaser/goreleaser-action@v4
-        with: 
-          args: "release -f .goreleaser/linux.yml --clean"
-          version: latest
-          workdir: .
-        env: 
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
   build-windows:
     runs-on: windows-latest-8-cores
     steps:
@@ -71,6 +48,33 @@ jobs:
         uses: goreleaser/goreleaser-action@v4
         with: 
           args: "release -f .goreleaser/windows.yml --clean"
+          version: latest
+          workdir: .
+        env: 
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
+  build-linux:
+    runs-on: ubuntu-latest-16-cores
+    steps:
+      - name: "Check out code"
+        uses: actions/checkout@v3
+        with: 
+          fetch-depth: 0
+      
+      - name: "Set up Go"
+        uses: actions/setup-go@v4
+        with: 
+          go-version: 1.20.x
+          cache: true
+
+      # todo: musl compatible?
+      - name: Install Dependences
+        run: sudo apt install gcc-aarch64-linux-gnu
+
+      - name: "Create release on GitHub"
+        uses: goreleaser/goreleaser-action@v4
+        with: 
+          args: "release -f .goreleaser/linux.yml --clean"
           version: latest
           workdir: .
         env: 
