fix via dep. bot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,26 +20,26 @@ updates:
     allow:
       - dependency-name: "github.com/projectdiscovery/*"
 
-#  # Maintain dependencies for GitHub Actions
-#  - package-ecosystem: "github-actions"
-#    directory: "/"
-#    schedule:
-#      interval: "weekly"
-#    target-branch: "dev"
-#    commit-message:
-#      prefix: "chore"
-#      include: "scope"
-#    labels:
-#      - "Type: Maintenance"
-#
-#  # Maintain dependencies for docker
-#  - package-ecosystem: "docker"
-#    directory: "/"
-#    schedule:
-#      interval: "weekly"
-#    target-branch: "dev"
-#    commit-message:
-#      prefix: "chore"
-#      include: "scope"
-#    labels:
-#      - "Type: Maintenance"
+ # Maintain dependencies for GitHub Actions
+ - package-ecosystem: "github-actions"
+   directory: "/"
+   schedule:
+     interval: "weekly"
+   target-branch: "dev"
+   commit-message:
+     prefix: "chore"
+     include: "scope"
+   labels:
+     - "Type: Maintenance"
+
+ # Maintain dependencies for docker
+ - package-ecosystem: "docker"
+   directory: "/"
+   schedule:
+     interval: "weekly"
+   target-branch: "dev"
+   commit-message:
+     prefix: "chore"
+     include: "scope"
+   labels:
+     - "Type: Maintenance"
