update gh actions

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -9,8 +9,18 @@ on:
       - '**.go'
       - '**.mod'
 jobs:
+  lint:
+    name: "Lint"
+    if: "${{ !endsWith(github.actor, '[bot]') }}"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: projectdiscovery/actions/setup/go@v1
+      - uses: projectdiscovery/actions/golangci-lint@v1
+
   build:
     name: Test Builds
+    needs: [lint]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
