--- a/.github/workflows/dep-auto-merge.yml
+++ b/.github/workflows/dep-auto-merge.yml
@@ -1,10 +1,12 @@
-name: 🤖 dep auto merge
+name: 🤖 Auto Merge
 
 on:
-  pull_request:
-    branches:
-      - dev
-  workflow_dispatch:
+  pull_request_review:
+    types: [submitted]
+  workflow_run:
+    workflows: ["♾️ Compatibility Check"]
+    types:
+      - completed
 
 permissions:
   pull-requests: write
@@ -12,7 +14,7 @@ permissions:
   repository-projects: write
 
 jobs:
-  automerge:
+  auto-merge:
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]'
     steps:
