--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -21,7 +21,7 @@ jobs:
         uses: projectdiscovery/actions/setup/go@v1
 
       - name: release test
-        uses: projectdiscovery/actions/goreleaser@master
+        uses: projectdiscovery/actions/goreleaser@v1
         with:
           args: --config=.goreleaser/mac.yml
           workdir: .
@@ -67,7 +67,7 @@ jobs:
           go-version: 1.21.x
 
       - name: release test
-        uses: projectdiscovery/actions/goreleaser@master
+        uses: projectdiscovery/actions/goreleaser@v1
         with:
           args: --config=.goreleaser/windows.yml
           workdir: .
