update release test action (#1308)
* update release test action

* minor

* use pd action

* pass only config arg

* ci(release-test): uses projectdiscovery/actions/setup/go

Signed-off-by: Dwi Siswanto <git@dw1.io>

* ci(release-test): projectdiscovery/actions/goreleaser@master [verify]

Signed-off-by: Dwi Siswanto <git@dw1.io>

* Revert "ci(release-test): projectdiscovery/actions/goreleaser@master [verify]"

This reverts commit b00c51b3fa2db87584bb8b97c4a071b5d312de58.

---------

Signed-off-by: Dwi Siswanto <git@dw1.io>
Co-authored-by: Dwi Siswanto <git@dw1.io>

--- a/.goreleaser/linux.yml
+++ b/.goreleaser/linux.yml
@@ -1,3 +1,5 @@
+version: 2
+
 env:
   - GO111MODULE=on
 before:
@@ -41,7 +43,7 @@ builds:
       - arm64
       
 archives:
-- format: zip
+- formats: zip
 
 checksum:
   name_template: "{{ .ProjectName }}-linux-checksums.txt"
