--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -3,9 +3,9 @@ name: 🔨 Release Test
 on:
   pull_request:
     paths:
-      - '**.yml'
-      - '**.go'
-      - '**.mod'
+      - "**.yml"
+      - "**.go"
+      - "**.mod"
   workflow_dispatch:
 
 jobs:
@@ -14,21 +14,18 @@ jobs:
     steps:
       - name: "Check out code"
         uses: actions/checkout@v4
-        with: 
+        with:
           fetch-depth: 0
 
       - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.21.x
-      
+        uses: projectdiscovery/actions/setup/go@v1
+
       - name: release test
-        uses: goreleaser/goreleaser-action@v4
+        uses: projectdiscovery/actions/goreleaser@v1
         with:
-          args: "release -f .goreleaser/mac.yml --clean --snapshot"
-          version: latest
+          args: --config=.goreleaser/mac.yml
           workdir: .
-        env: 
+        env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
   release-test-linux:
@@ -36,7 +33,7 @@ jobs:
     steps:
       - name: "Check out code"
         uses: actions/checkout@v4
-        with: 
+        with:
           fetch-depth: 0
 
       - name: Set up Go
@@ -47,14 +44,13 @@ jobs:
       # todo: musl compatible?
       - name: Install Dependences
         run: sudo apt update && sudo apt install gcc-aarch64-linux-gnu
-      
+
       - name: release test
-        uses: goreleaser/goreleaser-action@v4
+        uses: projectdiscovery/actions/goreleaser@v1
         with:
-          args: "release -f .goreleaser/linux.yml --clean --snapshot"
-          version: latest
+          args: --config=.goreleaser/linux.yml
           workdir: .
-        env: 
+        env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
   release-test-windows:
@@ -62,19 +58,18 @@ jobs:
     steps:
       - name: "Check out code"
         uses: actions/checkout@v4
-        with: 
+        with:
           fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21.x
-      
+
       - name: release test
-        uses: goreleaser/goreleaser-action@v4
+        uses: projectdiscovery/actions/goreleaser@v1
         with:
-          args: "release -f .goreleaser/windows.yml --clean --snapshot"
-          version: latest
+          args: --config=.goreleaser/windows.yml
           workdir: .
-        env: 
+        env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
